--- a/html/css/eventsList.css
+++ b/html/css/eventsList.css
@@ -43,3 +43,32 @@ textarea{
 .btn-delete:hover{
 	background: rgba(222, 21, 21, 0.50) !important;
 }
+
+.btn-gallery{
+	background: rgba(222, 21, 21, 0.20);
+    border: 1px solid #e69b9b;
+    border-radius: 69px;
+    padding: 0px 7px;
+    margin: 0 auto;
+    text-align: center;	
+}
+
+.btn-gallery{
+	background: rgba(8, 56, 25, 0.20);
+    border: 1px solid rgba(41, 107, 73, 0.5);
+    border-radius: 69px;
+    padding: 0px 7px;
+    margin: 0 auto;
+    text-align: center;	
+}
+
+.btn-gallery:hover{
+	background: rgba(8, 56, 25, 0.5);
+    border: 1px solid rgba(41, 107, 73, 0.5);
+}
+.eventImage-box img {
+    border: 2px solid #ddd;
+    padding: 25px;
+    width: 100%;
+    margin-bottom: 15px;
+}
