--- a/html/css/adminDashboard.css
+++ b/html/css/adminDashboard.css
@@ -1,10 +1,10 @@
 nav a.button-collapse{
 	display: block;
 }
-
 .weddingDetails-area{
-	width: 100%;
-	padding: 25px;	
+	background: #fff;
+	padding: 25px;
+	overflow: hidden;
 }
 /*table.centered thead tr th, table.centered tbody tr td {
     text-align: center;
