--- a/html/css/adminLogin.css
+++ b/html/css/adminLogin.css
@@ -1,6 +1,9 @@
-
+body{
+	background: #790C17 !important;
+}
 .login-area{
 	position: relative;
+	margin-top: 100px;
 }
 .bg-img img{
 	width: 100%;
@@ -13,8 +16,8 @@
     width: 35%;
     /* float: right; */
     margin: 0 auto;
-    margin-top: 15%;
-    background: #FFF;
+    /*margin-top: 10%;*/
+    background: #fff;
     padding: 25px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.41);
 }
