--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,3 +2,16 @@
 nav{
 	background:#790c17 !important;
 }
+.general-delete-btn{
+	background: rgba(222, 21, 21, 0.20) !important;
+	border: 1px solid #e69b9b !important;
+	color: #000 !important;
+	border-radius: 69px !important;
+	padding: 0px 7px !important;
+	margin: 0 auto !important;
+	text-align: center !important;
+
+}
+.general-delete-btn:hover {
+    background: rgba(222, 21, 21, 0.50) !important;
+}
