--- a/html/css/rsvp.css
+++ b/html/css/rsvp.css
@@ -195,6 +195,7 @@ textarea.materialize-textarea:focus:not([readonly]){
   margin: 10px;
   padding: 20px;
   color: #fff;
+  cursor: pointer;
 }
 .event_name {
   font-size: 16px;
