--- a/html/css/rsvp.css
+++ b/html/css/rsvp.css
@@ -11,6 +11,10 @@ body{
 	top: 50px;
 }
 
+.light{
+    color: #000 !important;
+}
+
 .rsvp-container .row {
     border-bottom: 2px solid rgba(124, 23, 29, 0.24);
     padding-bottom: 15px;
