--- a/html/css/guest_list.css
+++ b/html/css/guest_list.css
@@ -76,3 +76,12 @@ textarea{
     width: 100%;
     margin-bottom: 15px;
 }
+
+.guest-name {
+  font-weight: bold;
+  color: #727272;
+}
+.guest-contact {
+  font-size: 12px;
+  color: #727272;
+}
